--- a/styles/home.css
+++ b/styles/home.css
@@ -18,7 +18,6 @@ body {
 #heading {
     display: flex;
     align-items: center;
-    margin-bottom: -15px;
     margin-left: 10px;
     gap: 15px;
 }
